fixed bug where pressing key to unwrap while editing wouldnt remove the string list entry, added option for warning on page leave

--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ input[type="color"]
     height: 30px;
 }
 
+label
+{
+    user-select: none;
+}
+
 .numberInput
 {
     width: 40px;
